finished the project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="line"></div>
       <div class="bot">
         <h4>Here is a link if you're interested in Collaborating</h4>
-        <p class="collab">Let's Team Up!</p>
+        <p class="collab"><a href="#"> Let's Team Up!</a></p>
       </div>
     </section>
   </header>
